fix spacing on home page and add budget download

--- a/static/style.css
+++ b/static/style.css
@@ -49,29 +49,11 @@ body {
     height: 32rem;
 }
 
-
-/* MARKETING CONTENT
--------------------------------------------------- */
-
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-    margin-bottom: 1.5rem;
-    text-align: center;
-}
-.marketing h2 {
-    font-weight: 400;
-}
-.marketing .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
-}
-
-
 /* Featurettes
 ------------------------- */
 
 .featurette-divider {
-    margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+    margin: 2rem; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
@@ -100,6 +82,6 @@ body {
 
 @media (min-width: 62em) {
     .featurette-heading {
-        margin-top: 7rem;
+        margin-top: 1rem;
     }
 }
